[tool.poetry]
name = "nasa-cli"
version = "0.9.1"
description = "Command Line Interface made with Typer and Python for NASA API."
authors = ["Guilermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"
packages = [{include = "nasa_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
rich = "^13.5.3"
typer = "^0.9.0"
unidecode = "^1.3.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
isort = "^5.12.0"
pylint = "^2.17.5"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
